# ml_prototyping

./: .env_sample  .pre-commit-config.yaml  README.md  embeddings.ipynb  kaggle.ipynb  pyproject.toml
nlp/kaggle_patents/: callbacks.py  config.yaml  cpc_texts.py  data.py  metrics.py  train.py
