[tool.poetry]
name = "bespoke embeddings"
version = "0.0.1"
description = "Custom trained embeddings"
authors = ["Lina <2519360+rmminusrslash@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^2.1.0" 
openai = "^0.27.10"
matplotlib = "^3.7.2"
plotly = "^5.16.1"
python-dotenv = "^1.0.0"
scipy = "^1.11.2"
ipywidgets = "^8.1.0"
scikit-learn = "^1.3.1"
kaggle = "^1.5.16"
slugify = "^0.0.1"
hydra-core = "^1.3.2"
loguru = "^0.7.2"
tokenizers = "0.12.1"
transformers = "4.21.1"
protobuf = "3.20.1"
numpy = "1.26.0"
datasets = "^2.14.5"
jarviscloud = "^0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"
# put in dev since when running on a gpu instances torch is typically already installed
torch = {version = "^2.0.1+cpu", source = "pytorch-cpu"}
torchvision = {version = "^0.15.2+cpu", source = "pytorch-cpu"}
torchaudio = {version = "^2.0.2+cpu", source = "pytorch-cpu"}
fastai = "^2.7.12"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
